5772 Fjerner melosys.sed.x006/008 toggle (#1778)
* Fjerner melosys.sed.x006 toggle

* Fjerner melosys.sed.x008 toggle